# todo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATIONS.md  LICENSE  README.md  TODO.md  TODO.yaml  install.ps1
.github/workflows/: release.yml
dashboard/: index.html
demo/: README.md  demo.tape
docs/: index.html  style.css
docs/documentation/: index.html
skills/: SKILL.md
src/: commands.rs  config.rs  dashboard.rs  id_gen.rs  main.rs  models.rs  parser.rs  serializer.rs  tags.rs  yaml_util.rs
tests/: integration_test.rs
wix/: main.wxs
