[package]
name = "todo-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
